fix: :wrench: ajuste app prop passando cors